--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -91,7 +91,7 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: 10.0.2.15:8081/melekbejaoui-5arctic1-g2-devopsproject:199
+          image: lookabj/melekbejaoui-5arctic1-g2-devopsproject:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8089
