--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: myapp
+
 ---
-# mysql-deployment.yaml
+# MySQL ConfigMap
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -14,20 +15,31 @@ data:
     [mysqld]
     default_authentication_plugin=mysql_native_password
     bind-address=0.0.0.0
+
 ---
+# MySQL Service
 apiVersion: v1
 kind: Service
 metadata:
   name: mysql-db
   namespace: myapp
+  labels:
+    app: mysql
 spec:
   ports:
-    - port: 3306
+    - name: mysql
+      port: 3306
       targetPort: 3306
+      protocol: TCP
+    - name: metrics
+      port: 9104
+      targetPort: 9104
       protocol: TCP
   selector:
     app: mysql
+
 ---
+# MySQL Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -43,6 +55,10 @@ spec:
     metadata:
       labels:
         app: mysql
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9104"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
         - name: mysql
@@ -60,21 +76,36 @@ spec:
               mountPath: /var/lib/mysql
             - name: mysql-config
               mountPath: /etc/mysql/conf.d
+        - name: mysqld-exporter
+          image: prom/mysqld-exporter:v0.14.0
+          ports:
+            - containerPort: 9104
+              name: metrics
+          env:
+            - name: DATA_SOURCE_NAME
+              value: "root:@(localhost:3306)/"
+          args:
+            - --collect.info_schema.tables
+            - --collect.info_schema.innodb_metrics
+            - --collect.global_status
+            - --collect.global_variables
+            - --collect.slave_status
+            - --collect.info_schema.processlist
+            - --web.listen-address=:9104
       volumes:
         - name: mysql-persistent-storage
           emptyDir: {}
         - name: mysql-config
           configMap:
             name: mysql-config
+
 ---
-#Spring deployment
+# Spring Boot Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: myapp-deployment
   namespace: myapp
-  labels:
-    app: myapp
 spec:
   replicas: 2
   selector:
@@ -126,24 +157,24 @@ spec:
             - name: MANAGEMENT_ENDPOINT_PROMETHEUS_ENABLED
               value: "true"
             - name: MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED
-              value: "true"  
+              value: "true"
             - name: MANAGEMENT_ENDPOINT_HEALTH_SHOW_DETAILS
               value: "always"
             - name: MANAGEMENT_ENDPOINTS_WEB_BASE_PATH
               value: "/actuator"
+
 ---
+# Spring Boot Service
 apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
   namespace: myapp
-  labels:
-    app: myapp    # This matches the ServiceMonitor selector
 spec:
   selector:
     app: myapp
   ports:
-    - name: metrics   # This matches the ServiceMonitor endpoint port
+    - name: metrics
       port: 8091
       targetPort: 8091
       protocol: TCP
