--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -11,13 +11,20 @@ spec:
     metadata:
       labels:
         app: devops
-    spec: # Noncompliant
+    spec:
       containers:
         - name: devops
           image: cyrine105/devops:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
+          resources:
+            limits:
+              memory: "512Mi"   # Set a memory limit
+              ephemeral-storage: "1Gi"  # Set a storage limit
+            requests:
+              memory: "256Mi"
+              ephemeral-storage: "500Mi"
 ---
 apiVersion: v1
 kind: Service
