--- a/Configurations/Ansible/tasks.yml
+++ b/Configurations/Ansible/tasks.yml
@@ -13,6 +13,9 @@
     sonarqube_port: 9000
     nexus_port: 8081
 
+    docker_compose_version: "1.29.2"
+    kubectl_version: "1.24.2"
+
   tasks:
     - name: Update and upgrade apt packages
       apt:
@@ -156,6 +159,40 @@
         append: yes
       tags:
         - docker
+
+    - name: Add Jenkins user to Docker group
+      user:
+        name: jenkins
+        groups: docker
+        append: yes
+      tags:
+        - docker
+
+    - name: Install Docker Compose
+      get_url:
+        url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-$(uname -s)-$(uname -m)"
+        dest: /usr/local/bin/docker-compose
+        mode: '0755'
+      tags:
+        - docker
+
+    - name: Verify Docker Compose installation
+      command: docker-compose --version
+      tags:
+        - docker
+
+    - name: Install kubectl
+      get_url:
+        url: "https://dl.k8s.io/release/v{{ kubectl_version }}/bin/linux/amd64/kubectl"
+        dest: /usr/local/bin/kubectl
+        mode: '0755'
+      tags:
+        - kubectl
+
+    - name: Verify kubectl installation
+      command: kubectl version --client
+      tags:
+        - kubectl
 
     - name: Pull SonarQube Docker image
       docker_image:
